--- a/front_end/profile.html
+++ b/front_end/profile.html
@@ -118,6 +118,11 @@
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid #007bff;
+            cursor: pointer;
+            transition: transform 0.3s;
+        }
+        .image-preview:hover {
+            transform: scale(1.05);
         }
     </style>
 </head>
@@ -134,7 +139,7 @@
         <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
         <a href="add_activity.html"><i class="fas fa-dumbbell"></i> Workouts</a>
         <a href="profile.html" class="active"><i class="fas fa-user"></i> Profile</a>
-        <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        <a href="#" onclick="logout(); return false;"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </div>
 
     <!-- Main Content -->
@@ -161,6 +166,7 @@
                         <img id="previewImage" src="https://placehold.co/120x120" alt="Profile Preview" class="image-preview">
                         <div class="mt-3">
                             <input type="file" id="profile_image" accept="image/*" class="form-control">
+                            <small class="text-muted">Click the photo to change</small>
                         </div>
                     </div>
 
@@ -178,13 +184,12 @@
                     </div>
 
                     <button type="submit" class="btn btn-primary w-100">Update Profile</button>
-                    <p id="updateMessage" class="text-center mt-3"></p>
+                    <p id="updateMessage" class="text-center mt-3 fw-bold"></p>
                 </form>
             </div>
 
-            <!-- Accordion (existing) -->
+            <!-- Accordion -->
             <div class="accordion mt-5" id="profileAccordion">
-                <!-- Keep your existing accordion items -->
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#personal">
@@ -200,7 +205,36 @@
                     </div>
                 </div>
 
-                <!-- Other accordion items... -->
+                <!-- Add more accordion items as needed -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#stats">
+                            <i class="fas fa-chart-bar me-2 text-primary"></i> Statistics
+                        </button>
+                    </h2>
+                    <div id="stats" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Total Workouts: 45<br>
+                            Total Distance: 120 km<br>
+                            Calories Burned: 15,000
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#settings">
+                            <i class="fas fa-cog me-2 text-primary"></i> Settings
+                        </button>
+                    </h2>
+                    <div id="settings" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Change Password<br>
+                            Notification Preferences<br>
+                            Unit System (km/miles)
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -218,18 +252,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api.js"></script>
     <script>
-        // Load profile data and display
+        // Auth guard - redirect to login if not authenticated
+        if (!localStorage.getItem('access_token')) {
+            window.location.href = 'index.html';
+        }
+
         async function loadProfile() {
             try {
                 const user = await apiGet('/profile/');
-                const imageUrl = user.profile_image || 'https://placehold.co/120x120';
+                const imageUrl = user.avatar || 'https://placehold.co/120x120';
 
-                // Update all images
+                // Update all photos
                 document.getElementById('sidebarPhoto').src = imageUrl;
                 document.getElementById('mobilePhoto').src = imageUrl;
                 document.getElementById('previewImage').src = imageUrl;
 
-                // Update names/emails
+                // Update names and emails
                 const fullName = `${user.first_name} ${user.last_name}`.trim() || user.username;
                 document.getElementById('sidebarName').textContent = fullName;
                 document.getElementById('mobileName').textContent = fullName;
@@ -244,80 +282,86 @@
                 document.getElementById('last_name').value = user.last_name || '';
                 document.getElementById('email').value = user.email || '';
             } catch (err) {
+                console.error('Failed to load profile:', err);
                 window.location.href = 'index.html';
             }
         }
 
-        // Update profile with image
-        document.getElementById('profileForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
+        // Make preview image clickable
+        document.getElementById('previewImage').onclick = () => {
+            document.getElementById('profile_image').click();
+        };
 
-    const formData = new FormData();
-    formData.append('first_name', document.getElementById('first_name').value.trim());
-    formData.append('last_name', document.getElementById('last_name').value.trim());
-    formData.append('email', document.getElementById('email').value.trim());
-
-    const imageFile = document.getElementById('profile_image').files[0];
-    if (imageFile) {
-        formData.append('avatar', imageFile);  // Correct field name
-    }
-
-    const messageEl = document.getElementById('updateMessage');
-    messageEl.textContent = '';
-    messageEl.style.color = '';
-
-    try {
-        const token = localStorage.getItem('access_token');
-        if (!token) throw new Error('No authentication token');
-
-        const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/profile/', {
-            method: 'PATCH',  // Use PATCH, not PUT (more standard for partial updates)
-            headers: {
-                'Authorization': `Bearer ${token}`
-                // Do NOT set Content-Type — browser sets it automatically with boundary for FormData
-            },
-            body: formData
-        });
-
-        if (!response.ok) {
-            const errorData = await response.json().catch(() => ({}));
-            throw new Error(errorData.detail || 'Update failed');
-        }
-
-        const updatedUser = await response.json();
-
-        messageEl.textContent = 'Profile updated successfully!';
-        messageEl.style.color = 'green';
-
-        // Update preview and sidebar/mobile photos
-        if (updatedUser.avatar) {
-            const fullUrl = updatedUser.avatar;
-            document.getElementById('previewImage').src = fullUrl;
-            document.getElementById('sidebarPhoto').src = fullUrl;
-            document.getElementById('mobilePhoto').src = fullUrl;
-        }
-
-        // Update name/email in display
-        const fullName = `${updatedUser.first_name} ${updatedUser.last_name}`.trim() || updatedUser.username;
-        document.getElementById('sidebarName').textContent = fullName;
-        document.getElementById('mobileName').textContent = fullName;
-        document.getElementById('detailName').textContent = fullName;
-
-        document.getElementById('sidebarEmail').textContent = updatedUser.email;
-        document.getElementById('mobileEmail').textContent = updatedUser.email;
-        document.getElementById('detailEmail').textContent = updatedUser.email;
-
-    } catch (err) {
-        console.error('Profile update error:', err);
-        messageEl.textContent = err.message || 'Failed to update profile';
-        messageEl.style.color = 'red';
-    }
-});
         // Preview selected image
         document.getElementById('profile_image').addEventListener('change', (e) => {
             const file = e.target.files[0];
             if (file) {
                 document.getElementById('previewImage').src = URL.createObjectURL(file);
+            }
+        });
+
+        // Submit form - update profile
+        document.getElementById('profileForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            const formData = new FormData();
+            formData.append('first_name', document.getElementById('first_name').value.trim());
+            formData.append('last_name', document.getElementById('last_name').value.trim());
+            formData.append('email', document.getElementById('email').value.trim());
+
+            const imageFile = document.getElementById('profile_image').files[0];
+            if (imageFile) {
+                formData.append('avatar', imageFile);
+            }
+
+            const messageEl = document.getElementById('updateMessage');
+            messageEl.textContent = 'Updating...';
+            messageEl.style.color = '#007bff';
+
+            try {
+                const token = localStorage.getItem('access_token');
+                if (!token) throw new Error('Not authenticated');
+
+                const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/profile/', {
+                    method: 'PATCH',
+                    headers: {
+                        'Authorization': `Bearer ${token}`
+                    },
+                    body: formData
+                });
+
+                if (!response.ok) {
+                    const errorData = await response.json().catch(() => ({}));
+                    throw new Error(errorData.detail || 'Update failed');
+                }
+
+                const updatedUser = await response.json();
+
+                messageEl.textContent = 'Profile updated successfully!';
+                messageEl.style.color = 'green';
+
+                // Update photos if new avatar
+                if (updatedUser.avatar) {
+                    const fullUrl = updatedUser.avatar;
+                    document.getElementById('previewImage').src = fullUrl;
+                    document.getElementById('sidebarPhoto').src = fullUrl;
+                    document.getElementById('mobilePhoto').src = fullUrl;
+                }
+
+                // Update names/emails
+                const fullName = `${updatedUser.first_name} ${updatedUser.last_name}`.trim() || updatedUser.username;
+                document.getElementById('sidebarName').textContent = fullName;
+                document.getElementById('mobileName').textContent = fullName;
+                document.getElementById('detailName').textContent = fullName;
+
+                document.getElementById('sidebarEmail').textContent = updatedUser.email;
+                document.getElementById('mobileEmail').textContent = updatedUser.email;
+                document.getElementById('detailEmail').textContent = updatedUser.email;
+
+            } catch (err) {
+                console.error('Profile update error:', err);
+                messageEl.textContent = err.message || 'Failed to update profile';
+                messageEl.style.color = 'red';
             }
         });
 
