--- a/front_end/index.html
+++ b/front_end/index.html
@@ -144,18 +144,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/api.js"></script>
 <script>
-    // Remove the auto-redirect — it causes loops on login page
-    // We only want this on protected pages like dashboard.html
+    // Remove this redirect — it's causing loops. Move to protected pages like dashboard.html
+    // if (localStorage.getItem('access_token')) { ... }
 
     async function loginUser(event) {
         event.preventDefault();
-
         const btn = event.target.querySelector('button');
         const loginText = btn.querySelector('.login-text');
         const spinner = btn.querySelector('.spinner-border');
         const errorEl = document.getElementById('error');
 
-        // Show spinner
         loginText.classList.add('d-none');
         spinner.classList.remove('d-none');
         btn.disabled = true;
@@ -170,12 +168,9 @@
             return;
         }
 
-        // Always clear old tokens before new login attempt
-        localStorage.clear();
+        localStorage.clear();  // Clear any old tokens
 
         try {
-            console.log('Sending login request...');
-
             const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/token/', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
@@ -183,22 +178,18 @@
             });
 
             const data = await response.json();
-            console.log('Login response:', response.status, data);
 
             if (!response.ok) {
-                throw new Error(data.detail || data.non_field_errors || 'Invalid username or password');
+                throw new Error(data.detail || 'Invalid username or password');
             }
 
-            // Success! Save tokens
             localStorage.setItem('access_token', data.access);
             localStorage.setItem('refresh_token', data.refresh || '');
 
-            // Redirect to dashboard
             window.location.href = 'dashboard.html';
 
         } catch (err) {
-            console.error('Login error:', err);
-            errorEl.textContent = err.message || 'Login failed. Please try again.';
+            errorEl.textContent = err.message;
             resetButton();
         }
 
@@ -208,6 +199,7 @@
             btn.disabled = false;
         }
     }
+</script>
 </script>
 </body>
 </html>
