feat: add avatar field to User model for profile photos

--- a/front_end/profile.html
+++ b/front_end/profile.html
@@ -252,130 +252,127 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api.js"></script>
     <script>
-        // === AUTHENTICATION GUARD WITH 401 HANDLING ===
-        const token = localStorage.getItem('access_token');
-        if (!token) {
-            window.location.href = 'index.html'; // No token → back to login
+    // Authentication Guard with 401 Handling
+    const token = localStorage.getItem('access_token');
+    if (!token) {
+        window.location.href = 'index.html';
+    }
+
+    window.addEventListener('unhandledrejection', event => {
+        const err = event.reason;
+        if (err && err.message && err.message.includes('401')) {
+            localStorage.clear();
+            window.location.href = 'index.html';
+        }
+    });
+
+    async function loadProfile() {
+        try {
+            const user = await apiGet('/api/profile/');
+            const imageUrl = user.avatar || 'https://placehold.co/120x120';
+
+            document.getElementById('sidebarPhoto').src = imageUrl;
+            document.getElementById('mobilePhoto').src = imageUrl;
+            document.getElementById('previewImage').src = imageUrl;
+
+            const fullName = `${user.first_name} ${user.last_name}`.trim() || user.username;
+            document.getElementById('sidebarName').textContent = fullName;
+            document.getElementById('mobileName').textContent = fullName;
+            document.getElementById('detailName').textContent = fullName;
+
+            document.getElementById('sidebarEmail').textContent = user.email;
+            document.getElementById('mobileEmail').textContent = user.email;
+            document.getElementById('detailEmail').textContent = user.email;
+
+            document.getElementById('first_name').value = user.first_name || '';
+            document.getElementById('last_name').value = user.last_name || '';
+            document.getElementById('email').value = user.email || '';
+        } catch (err) {
+            console.error('Failed to load profile:', err);
+            window.location.href = 'index.html';
+        }
+    }
+
+    // Make preview image clickable
+    document.getElementById('previewImage').onclick = () => {
+        document.getElementById('profile_image').click();
+    };
+
+    // Preview selected image
+    document.getElementById('profile_image').addEventListener('change', (e) => {
+        const file = e.target.files[0];
+        if (file) {
+            document.getElementById('previewImage').src = URL.createObjectURL(file);
+        }
+    });
+
+    // Submit form - update profile
+    document.getElementById('profileForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const formData = new FormData();
+        formData.append('first_name', document.getElementById('first_name').value.trim());
+        formData.append('last_name', document.getElementById('last_name').value.trim());
+        formData.append('email', document.getElementById('email').value.trim());
+
+        const imageFile = document.getElementById('profile_image').files[0];
+        if (imageFile) {
+            formData.append('avatar', imageFile);  // Correct field name
         }
 
-        // Global error handler for all apiGet calls on this page
-        window.addEventListener('unhandledrejection', event => {
-            const err = event.reason;
-            if (err && err.message && err.message.includes('401')) {
-                localStorage.clear();
-                window.location.href = 'index.html';
+        const messageEl = document.getElementById('updateMessage');
+        messageEl.textContent = 'Updating...';
+        messageEl.style.color = '#007bff';
+
+        try {
+            const token = localStorage.getItem('access_token');
+            if (!token) throw new Error('Not authenticated');
+
+            const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/profile/', {
+                method: 'PATCH',  // Use PATCH for partial update
+                headers: {
+                    'Authorization': `Bearer ${token}`
+                    // NO Content-Type header with FormData!
+                },
+                body: formData
+            });
+
+            if (!response.ok) {
+                const errorData = await response.json().catch(() => ({}));
+                throw new Error(errorData.detail || 'Update failed');
             }
-        });
 
-        async function loadProfile() {
-            try {
-                const user = await apiGet('/api/profile/');
-                const imageUrl = user.avatar || 'https://placehold.co/120x120';
+            const updatedUser = await response.json();
 
-                // Update all photos
-                document.getElementById('sidebarPhoto').src = imageUrl;
-                document.getElementById('mobilePhoto').src = imageUrl;
-                document.getElementById('previewImage').src = imageUrl;
+            messageEl.textContent = 'Profile updated successfully!';
+            messageEl.style.color = 'green';
 
-                // Update names and emails
-                const fullName = `${user.first_name} ${user.last_name}`.trim() || user.username;
-                document.getElementById('sidebarName').textContent = fullName;
-                document.getElementById('mobileName').textContent = fullName;
-                document.getElementById('detailName').textContent = fullName;
-
-                document.getElementById('sidebarEmail').textContent = user.email;
-                document.getElementById('mobileEmail').textContent = user.email;
-                document.getElementById('detailEmail').textContent = user.email;
-
-                // Pre-fill form
-                document.getElementById('first_name').value = user.first_name || '';
-                document.getElementById('last_name').value = user.last_name || '';
-                document.getElementById('email').value = user.email || '';
-            } catch (err) {
-                console.error('Failed to load profile:', err);
-                window.location.href = 'index.html';
+            // Update all photos with new avatar URL
+            if (updatedUser.avatar) {
+                const fullUrl = updatedUser.avatar;  // Should be full URL like /media/avatars/xxx.jpg
+                document.getElementById('previewImage').src = fullUrl;
+                document.getElementById('sidebarPhoto').src = fullUrl;
+                document.getElementById('mobilePhoto').src = fullUrl;
             }
+
+            // Update name/email displays
+            const fullName = `${updatedUser.first_name} ${updatedUser.last_name}`.trim() || updatedUser.username;
+            document.getElementById('sidebarName').textContent = fullName;
+            document.getElementById('mobileName').textContent = fullName;
+            document.getElementById('detailName').textContent = fullName;
+
+            document.getElementById('sidebarEmail').textContent = updatedUser.email;
+            document.getElementById('mobileEmail').textContent = updatedUser.email;
+            document.getElementById('detailEmail').textContent = updatedUser.email;
+
+        } catch (err) {
+            console.error('Profile update error:', err);
+            messageEl.textContent = err.message || 'Failed to update profile';
+            messageEl.style.color = 'red';
         }
+    });
 
-        // Make preview image clickable
-        document.getElementById('previewImage').onclick = () => {
-            document.getElementById('profile_image').click();
-        };
-
-        // Preview selected image
-        document.getElementById('profile_image').addEventListener('change', (e) => {
-            const file = e.target.files[0];
-            if (file) {
-                document.getElementById('previewImage').src = URL.createObjectURL(file);
-            }
-        });
-
-        // Submit form - update profile
-        document.getElementById('profileForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            const formData = new FormData();
-            formData.append('first_name', document.getElementById('first_name').value.trim());
-            formData.append('last_name', document.getElementById('last_name').value.trim());
-            formData.append('email', document.getElementById('email').value.trim());
-
-            const imageFile = document.getElementById('profile_image').files[0];
-            if (imageFile) {
-                formData.append('avatar', imageFile);
-            }
-
-            const messageEl = document.getElementById('updateMessage');
-            messageEl.textContent = 'Updating...';
-            messageEl.style.color = '#007bff';
-
-            try {
-                const token = localStorage.getItem('access_token');
-                if (!token) throw new Error('Not authenticated');
-
-                const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/profile/', {
-                    method: 'PATCH',
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    },
-                    body: formData
-                });
-
-                if (!response.ok) {
-                    const errorData = await response.json().catch(() => ({}));
-                    throw new Error(errorData.detail || 'Update failed');
-                }
-
-                const updatedUser = await response.json();
-
-                messageEl.textContent = 'Profile updated successfully!';
-                messageEl.style.color = 'green';
-
-                // Update photos if new avatar
-                if (updatedUser.avatar) {
-                    const fullUrl = updatedUser.avatar;
-                    document.getElementById('previewImage').src = fullUrl;
-                    document.getElementById('sidebarPhoto').src = fullUrl;
-                    document.getElementById('mobilePhoto').src = fullUrl;
-                }
-
-                // Update names/emails
-                const fullName = `${updatedUser.first_name} ${updatedUser.last_name}`.trim() || updatedUser.username;
-                document.getElementById('sidebarName').textContent = fullName;
-                document.getElementById('mobileName').textContent = fullName;
-                document.getElementById('detailName').textContent = fullName;
-
-                document.getElementById('sidebarEmail').textContent = updatedUser.email;
-                document.getElementById('mobileEmail').textContent = updatedUser.email;
-                document.getElementById('detailEmail').textContent = updatedUser.email;
-
-            } catch (err) {
-                console.error('Profile update error:', err);
-                messageEl.textContent = err.message || 'Failed to update profile';
-                messageEl.style.color = 'red';
-            }
-        });
-
-        loadProfile();
-    </script>
+    loadProfile();
+</script>
 </body>
 </html>
