--- a/front_end/profile.html
+++ b/front_end/profile.html
@@ -252,15 +252,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api.js"></script>
     <script>
-    // Authentication Guard with 401 Handling
+    // Auth Guard
     const token = localStorage.getItem('access_token');
     if (!token) {
         window.location.href = 'index.html';
     }
 
     window.addEventListener('unhandledrejection', event => {
-        const err = event.reason;
-        if (err && err.message && err.message.includes('401')) {
+        if (event.reason?.message?.includes('401')) {
             localStorage.clear();
             window.location.href = 'index.html';
         }
@@ -293,12 +292,12 @@
         }
     }
 
-    // Make preview image clickable
+    // Clickable preview
     document.getElementById('previewImage').onclick = () => {
         document.getElementById('profile_image').click();
     };
 
-    // Preview selected image
+    // Preview image
     document.getElementById('profile_image').addEventListener('change', (e) => {
         const file = e.target.files[0];
         if (file) {
@@ -306,7 +305,7 @@
         }
     });
 
-    // Submit form - update profile
+    // Update profile
     document.getElementById('profileForm').addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -317,7 +316,7 @@
 
         const imageFile = document.getElementById('profile_image').files[0];
         if (imageFile) {
-            formData.append('avatar', imageFile);  // Correct field name
+            formData.append('avatar', imageFile);
         }
 
         const messageEl = document.getElementById('updateMessage');
@@ -325,14 +324,10 @@
         messageEl.style.color = '#007bff';
 
         try {
-            const token = localStorage.getItem('access_token');
-            if (!token) throw new Error('Not authenticated');
-
             const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/profile/', {
-                method: 'PATCH',  // Use PATCH for partial update
+                method: 'PATCH',
                 headers: {
-                    'Authorization': `Bearer ${token}`
-                    // NO Content-Type header with FormData!
+                    'Authorization': `Bearer ${localStorage.getItem('access_token')}`
                 },
                 body: formData
             });
@@ -347,15 +342,13 @@
             messageEl.textContent = 'Profile updated successfully!';
             messageEl.style.color = 'green';
 
-            // Update all photos with new avatar URL
             if (updatedUser.avatar) {
-                const fullUrl = updatedUser.avatar;  // Should be full URL like /media/avatars/xxx.jpg
+                const fullUrl = updatedUser.avatar;
                 document.getElementById('previewImage').src = fullUrl;
                 document.getElementById('sidebarPhoto').src = fullUrl;
                 document.getElementById('mobilePhoto').src = fullUrl;
             }
 
-            // Update name/email displays
             const fullName = `${updatedUser.first_name} ${updatedUser.last_name}`.trim() || updatedUser.username;
             document.getElementById('sidebarName').textContent = fullName;
             document.getElementById('mobileName').textContent = fullName;
@@ -366,8 +359,8 @@
             document.getElementById('detailEmail').textContent = updatedUser.email;
 
         } catch (err) {
-            console.error('Profile update error:', err);
-            messageEl.textContent = err.message || 'Failed to update profile';
+            console.error(err);
+            messageEl.textContent = err.message || 'Failed to update';
             messageEl.style.color = 'red';
         }
     });
